Fix CodeQL note-level Java cleanups
- Replace the deprecated boxed-type constructors with valueOf()
- Make the nested classes that never touch their enclosing instance static
- Remove locals that are assigned but never read (incl. two String
  constants left over from commented-out throws)
- Use String.isEmpty() instead of "".equals(...) on String values
- Fix javadoc: drop @throws for exceptions that cannot be thrown, align
  @param names with the signatures, remove the javadoc of a commented-out
  method

Resolves CodeQL alerts #26, #29, #31, #32, #35-#38, #43-#46, #51,
#422-#434, #436, #438, #439, #441-#451, #633-#645.